Piccole modifiche di correzione

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProvaF303K8gg</name>
+	<name>ProvaF303K8</name>
 	<comment></comment>
 	<projects>
 	</projects>
